# graduate-work

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DataImporter.cpp  DataImporter.h  GraphOperations.cpp  GraphOperations.h  GraphsToMerge.txt  IMPORT_SYSTEM_README.md  LICENSE  MIGRATION_GUIDE.md  Matrix.h  README.md  SETUP.md  check_environment.ps1  conversion_functions.cpp  example.txt  graduate work.cpp  graduate work.sln  input.txt  kGraphOperations.cpp  kGraphOperations.h  main.cpp  run_benchmarks.sh  test.bat
docs/: ALGORITHMS.md  ARCHITECTURE.md  CPFM_COMPARISON.md  Doxyfile.in  EXPERIMENTS.md  GIT_BEST_PRACTICES.md  USER_GUIDE.md
docs/references/: README.md  algorithm_checklist.md
experiments/2026-04-23/: README.md  cross_check_agreement_matrix.csv  cross_check_perf_summary.csv  cross_check_results.csv  geant.dot  graph_widget.html
experiments/2026-04-24/: README.md  cross_check_agreement_matrix.csv  cross_check_disagreements.csv  cross_check_perf_summary.csv  cross_check_v2.csv
experiments/2026-04-25/: README.md  cross_check_agreement_matrix.csv  cross_check_perf_summary.csv  cross_check_trivial_cells.csv  cross_check_v3.csv
graduate work/: 4_blocks_sausage_3x3_kao.txt  5_blocks_sausage_3x3_kao.txt  Geant2009_kao.txt  GraphOperations.cpp  GraphOperations.h  K4_kao.txt  graduate work.cpp  graduate work.vcxproj  graduate work.vcxproj.filters  input.txt  kGraphOperations.cpp  kGraphOperations.h  output.txt  output1.txt  test_summary_results.csv
graphs_data/: 2_3x3_blocks_kao.txt  3_blocks_sausage_3x3_kao.txt  3_blocks_sausage_4x4_kao.txt  6_blocks_sausage_3x3_kao.txt  Geant2004_kao.txt  Geant2009_edgelist.txt  IEEE-118-node_kao.txt  K4_kao.txt  K5_kao.txt  MergedGraphs.txt  README.md  UPS_of_Russia_composed_with_colored_cut_vertices_kao.txt
include/: graph_reliability.h
include/graph_reliability/: CancelaPetingiState.h  CliHandlers.h  DataImporter.h  Exceptions.h  Graph.h  GraphOperations.h  GraphVisualizer.h  Logger.h  PathEnumerator.h  ReliabilityGraph.h  SeriesParallelTransform.h  TestSuite.h
scripts/: cross_check_analyze.py  run_cross_check.sh
src/: CancelaPetingiState.cpp  CliHandlers.cpp  DataImporter.cpp  Graph.cpp  GraphOperations.cpp  GraphVisualizer.cpp  Logger.cpp  PathEnumerator.cpp  ReliabilityGraph.cpp  SeriesParallelTransform.cpp  TestSuite.cpp  main.cpp  main_simple.cpp
tests/: CMakeLists.txt  test_DataImporter.cpp  test_Graph.cpp  test_GraphOperations.cpp  test_ReliabilityGraph.cpp  test_config.json  test_main.cpp
tools/: compare_cpfm.ps1
tools/nesterov_harness/: NesterovGraph.cpp  NesterovGraph.h  main.cpp
